--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -16,6 +16,7 @@
 </div>
 <p class="normal-text left-align">Experience:</p>
 <div class="ui divided items">
+  <div class="column"></div>
   <experience class="full-width" *ngFor="let xp of experience" [experience]="xp"></experience>
 </div>
 
