Updated the Github link

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -11,7 +11,7 @@
             <div class="four small column"></div>
             <div class="four small column">
                 <a href="https://www.facebook.com/gabriel.rusu.10485/"><i class="inverted facebook f icon"></i></a>
-                <a href="https://github.com/RusuGabriel"><i class="inverted github icon"></i></a>
+                <a href="https://github.com/gabriel-rusu"><i class="inverted github icon"></i></a>
                 <a
                     href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i
                         class="inverted linkedin icon"></i></a>
